--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -17,8 +17,9 @@
 
 	<ul>
 		{% if user.is_authenticated %}
-			<li><a href="{% url 'auth_logout' %}?next=/healthapp/">Logout</a></li>
+			<li><a href="{% url 'auth_logout' %}?next=/healthapple/">Logout</a></li>
 		{% else %}
+			<li><a href="{% url 'registration_register' %}">Register Here</a></li>
 			<li><a href="{% url 'auth_login' %}">Login</a></li>
 		{% endif %}
 	</ul>
