--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -17,8 +17,11 @@
 
 	<ul>
 		{% if user.is_authenticated %}
+			<h1>HealthApple says... hello {{ user.username }}!</h1>
 			<li><a href="{% url 'auth_logout' %}?next=/healthapple/">Logout</a></li>
+			<li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
 		{% else %}
+			<h1>HealthApple says... hello!</h1>
 			<li><a href="{% url 'registration_register' %}">Register Here</a></li>
 			<li><a href="{% url 'auth_login' %}">Login</a></li>
 		{% endif %}
