changed models. to forms. in forms.py (fixed my mistake). Added a search box in index page. Still have error .user_id missing

--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -3,9 +3,11 @@
 <html>
     <head>
         <title>HealthApple{% block title %}{% endblock %}</title>
+		
     </head>
 
     <body>
+		<h1><a href="/healthapple/">HealthApple</a></h1>
         {% block body_block %}{% endblock %}
     </body>
 </html>
