added search functionality just for bing for now (10 searches)

--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -5,8 +5,8 @@
 {% block body_block %}
 
     <h1>Index</h1>
-	
-	<form class="form-inline" id="user_form" method="post" action=".">
+
+	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
             <!-- Display the search form elements here -->
             <input class="form-control" type="text" size="50" name="query" value="" id="query" />
