populate script now link category and user

--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -9,5 +9,14 @@
     <body>
 		<h1><a href="/healthapple/">HealthApple</a></h1>
         {% block body_block %}{% endblock %}
+		
+		{% if user.is_authenticated %}
+
+			<li><a href="{% url 'user_profile' %}">My Profile</a></li>
+			
+		{% else %}
+			<h2>You're not logged in!</h2>
+
+		{% endif %}
     </body>
 </html>
