--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -4,7 +4,7 @@
 
 {% block body_block %}
 
-    <h1>Index</h1>
+    <h1>Search</h1>
 
 	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
