--- a/tango_with_django_project/templates/healthapple/bing_search_result.html
+++ b/tango_with_django_project/templates/healthapple/bing_search_result.html
@@ -17,6 +17,9 @@
             <div class="list-group-item">
                 <h4 class="list-group-item-heading"><a href="{{ result.link }}">{{ result.title }}</a></h4>
                 <p class="list-group-item-text">{{ result.summary }}</p>
+				<p class="list-group-item-text">Flesch score : {{ result.flesch_score }}</p>
+				<p class="list-group-item-text">Sentiment score : {{ result.sentiment_score }}</p>
+				<p class="list-group-item-text">Subjectivity score : {{ result.subjectivity_score }}</p>
             </div>
             {% endfor %}
         </div>
