--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -3,7 +3,7 @@
 <html lang"en">
   <head>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#383A84">
+    <meta name="theme-color" content="#2e7d32">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HealthApple</title>
     <meta name="description" content="Find out what clubs are busy tonight!">
