--- a/tango_with_django_project/templates/registration/logout.html
+++ b/tango_with_django_project/templates/registration/logout.html
@@ -2,9 +2,18 @@
 
 
 {% block body_block %}
-<div>
-    <h1>Logged out</h1>
+<div class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
+
+		<div class = 'centertext'>	
+			You are now logged out.
+			<br>
+			<br>
+			<a href="/healthapple/" class="waves-effect waves-teal btn-flat">Go Home</a>
+		</div>
+	
+	</div>
 </div>
 
-    <p>You are now logged out.</p>
+    
 {% endblock %}
