--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -1,75 +1,21 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html lang"en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="theme-color" content="#2e7d32">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HealthApple</title>
-    <meta name="description" content="Find out what clubs are busy tonight!">
-    <meta name="author" content="Bartek Juszczak">
+{% extends "base.html" %}
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-	<script src="{% static "javascript/jsIndex.js" %}"></script>
-	<link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
+{% block title %} - index{% endblock %}
 
+{% block body_block %}
 
-  </head>
-  <body onscroll = "javascript:onScroll()">
-      <div id = 'top_bar' class = 'green darken-2'></div>
-      <div id = 'main_container'>
-          <div id = 'top_bar_within'>
-              <div id = 'top_bar_dynamic'>
-                  <a href="/healthapple/"><div id = 'title' > HealthApple</div></a>
-				  
-                  <a href="javascript:toTop()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">arrow_upward</i></div>
-                  <a href="javascript:getSearchFocus()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">search</i></div></a>
-
-
-				  <div id = 'goUp' class = 'waves-effect waves-teal right login'>
-					{% if user.is_authenticated %}
-					<a  href="{% url 'auth_logout' %}"class="waves-effect waves btn-flat">LOGOUT</a>
-					{% else %}
-					<a href="{% url 'auth_login' %}" class="waves-effect waves btn-flat">LOGIN</a>
-					{% endif %}
-				  </div>
-              </div>
-
-          </div>
-          <div id = 'top_sep'>
-
-              <div class = 'main_content_card shown' id = 'search_card'>
-                  <div class = 'inner_main_content_card'>
-
-	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+<div class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
+		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
             <!-- Display the search form elements here -->
-            <input class="form-control" type="text" name="query" value="" id="query" />
+            <input class="form-control" type="text" name="query" value="" id="clubSearch" oninput="javascript:onSearchBoxInput()" />
             <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" />
-            <br />
-    </form>
-                  </div>
-              </div>
-			  <br>
+            <br/>
+			
+		</form>
+	<br>
+	
+</div>
 
-
-              <div id = 'dynamic_results1'>
-			  
-              </div>
-
-
-              <div id = 'dynamic_results2'>
-              </div>
-
-              <div id = 'page_bottom'>Privacy Dislaimer</div>
-              <br>
-			  
-
-          </div>
-      </div>
-  </body>
-</html>
+{% endblock %}
