--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -3,12 +3,17 @@
 {% block title %} - index{% endblock %}
 
 {% block body_block %}
-
-    <h1>My Profile</h1>
+<div class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
 	{% if user.is_authenticated %}
-			<h1>HealthApple says... hello {{ user.username }}!</h1>
-			<h1>A Picture should appear here... {{ user.picture }}!</h1>
+			{{ user.username }}
+			{{ person.picture }}
+			{{ user.email }}
+			<a class="waves-effect waves btn-flat black-text">Button</a>
 			<li><a href="{% url 'auth_logout' %}?next=/healthapple/">Logout</a></li>
 			<li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
 	{% endif %}
+	
+</div>
+</div>
 {% endblock %}
