--- a/tango_with_django_project/templates/registration/password_change_form.html
+++ b/tango_with_django_project/templates/registration/password_change_form.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-	<div>
-		<h1>Change password</h1>
-	</div>
+<div class onload="javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
 	
 	<form role="form"  method="post" action=".">
         {% csrf_token %}
-
 		{{form.as_p}}
-
-		<button type="submit" class="btn btn-default">Submit</button>
+		
+		<button type="submit" class="btn btn-default" onsubmit="/healthapple/")>Submit</button>
 
     </form>
+</div>
+</div>
 {% endblock %}
