--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -25,12 +25,8 @@
           <div id = 'top_bar_within'>
               <div id = 'top_bar_dynamic'>
                   <a href="/healthapple/"><div id = 'title' > HealthApple</div></a>
-				  
-				  
                   <a href="javascript:toTop()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">arrow_upward</i></div>
                   <a href="javascript:getSearchFocus()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">search</i></div></a>
-
-
 				  <div id = 'goUp' class = 'waves-effect waves-teal right login'>
 					{% if user.is_authenticated %}
 					<a  href="{% url 'user_profile' %}"class="waves-effect waves btn-flat">{{ user.username }}</a>
@@ -39,15 +35,13 @@
 					{% endif %}
 				  </div>
               </div>
-
           </div>
           <div id = 'top_sep'>
 		  {% block body_block %}{% endblock %}
-			  <br>
-			  
-
+		  <br>
           </div>
       </div>
+	  <div class='error' style='display:none'>Event Created</div>
   </body>
 </html>
         
