--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -4,7 +4,7 @@
 
 {% block body_block %}
 
-<div class = 'main_content_card shown' id = 'search_card'>
+<div onload = "javasript:passChange()" class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
 		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
@@ -14,8 +14,10 @@
             <br/>
 			
 		</form>
-	<br>
+	<br><div class='error' style='display:none'>Event Created</div>
 	
 </div>
+
+
 
 {% endblock %}
