--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -4,18 +4,20 @@
 
 {% block body_block %}
 
-<div class = 'main_content_card shown' id = 'search_card'>
+<div onload = "javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
 		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
             {% csrf_token %}
             <!-- Display the search form elements here -->
-            <input class="form-control" type="text" name="query" value="" id="clubSearch" oninput="javascript:onSearchBoxInput()" />
+            <input class="form-control" type="text" name="query" value="" id="clubSearch" />
             <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" />
             <br/>
 			
 		</form>
-	<br>
+	<br><div class='error' style='display:none'>Event Created</div>
 	
 </div>
+
+
 
 {% endblock %}
