--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -9,9 +9,13 @@
 			{{ user.username }}
 			{{ person.picture }}
 			{{ user.email }}
-			<a class="waves-effect waves btn-flat black-text">Button</a>
-			<li><a href="{% url 'auth_logout' %}?next=/healthapple/">Logout</a></li>
-			<li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
+			<br>
+			<br>
+			
+			<br>
+			<a href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-flat black-text right">Logout</a>
+			<a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat black-text right">Change Password</a>
+			<br>
 	{% endif %}
 	
 </div>
