--- a/tango_with_django_project/templates/base.html
+++ b/tango_with_django_project/templates/base.html
@@ -8,18 +8,14 @@
     <title>HealthApple</title>
     <meta name="description" content="Find out what clubs are busy tonight!">
     <meta name="author" content="Bartek Juszczak">
-
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-	<script src="{% static "javascript/jsIndex.js" %}"></script>
-	<link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
-
-
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+	  <script src="{% static "javascript/jsIndex.js" %}"></script>
+	  <link href="{% static "css/styleIndex.css" %}" rel="stylesheet" type="text/css" media="screen" />
   </head>
-  <body onscroll = "javascript:onScroll()">
+  <body onload = "javascript:notificationDisplay()" onscroll = "javascript:onScroll()">
       <div id = 'top_bar' class = 'green darken-2'></div>
       <div id = 'main_container'>
           <div id = 'top_bar_within'>
@@ -27,11 +23,11 @@
                   <a href="/healthapple/"><div id = 'title' > HealthApple</div></a>
                   <a href="javascript:toTop()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">arrow_upward</i></div>
                   <a href="javascript:getSearchFocus()"><div id = 'goUp'><i class="waves-effect waves material-icons md-18 right">search</i></div></a>
-				  <div id = 'goUp' class = 'waves-effect waves-teal right login'>
+				  <div id = 'goUp' class = 'waves-effect waves right login'>
 					{% if user.is_authenticated %}
-					<a  href="{% url 'user_profile' %}"class="waves-effect waves btn-flat">{{ user.username }}</a>
+					<a  href="{% url 'user_profile' %}"class="btn-flat">{{ user.username }}</a>
 					{% else %}
-					<a href="{% url 'auth_login' %}" class="waves-effect waves btn-flat">LOGIN</a>
+					<a href="{% url 'auth_login' %}" class="btn-flat">LOGIN</a>
 					{% endif %}
 				  </div>
               </div>
@@ -44,4 +40,3 @@
 	  <div class='error' style='display:none'>Event Created</div>
   </body>
 </html>
-        
