--- a/tango_with_django_project/templates/registration/password_change_form.html
+++ b/tango_with_django_project/templates/registration/password_change_form.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
 
 {% block body_block %}
-<div class onload="javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
+<div class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
-	
-	<form role="form"  method="post" action=".">
-        {% csrf_token %}
-		{{form.as_p}}
-		
-		<button type="submit" class="btn btn-default" onsubmit="/healthapple/")>Submit</button>
+   	<form role="form"  method="post" action="." onsubmit="javascript:notificationEnabler('passChange')">
+      {% csrf_token %}
+		  {{form.as_p}}
+		  <button type="submit" class="btn btn-primary waves-effect grey darken-3 waves" onsubmit="/healthapple/")>Submit</button>
 
     </form>
-</div>
+  </div>
 </div>
 {% endblock %}
