Created our own server search API

--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -6,7 +6,7 @@
 
 <div onload = "javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
-		<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
+		<form class="form-inline" id="user_form" method="get" >
             {% csrf_token %}
             <!-- Display the search form elements here -->
             <input class="form-control" type="text" name="query" value="" id="clubSearch" />
