--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -1,21 +1,24 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %} - index{% endblock %}
 
 {% block body_block %}
 <div class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
+      
 	{% if user.is_authenticated %}
-			{{ user.username }}
-			{{ person.picture }}
-			{{ user.email }}
+      <img class="responsive-img profile-pic left" src="{% static "images/default-user.png" %}" >
+      <div class = ''></div>
+      <div class = 'right' id = "user-details">
+		  	<i class="material-icons profile">person</i>{{ user.username }}<br>
+		  	<i class="material-icons profile">email</i>{{ user.email }}
+			</div>
 			<br>
 			<br>
-			
+			<br><br><br><br><br><br>
 			<br>
-			<a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-flat black-text right">Logout</a>
-			<a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat black-text right">Change Password</a>
-			<br>
+			<a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-flat black-text right bottom">Logout</a>
+			<a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat black-text right bottom">Change Password</a>
 	{% endif %}
 	
 </div>
