--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -7,9 +7,10 @@
 <div onload = "javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
         <input class="form-control" type="text" name="query" value="" id="clubSearch" />
-        <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" />
-        <br/>
-	  <br>
+        
+        <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
+    </div>
+    <div id = 'spinner'></div>
 </div>
 
 
