--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -10,7 +10,9 @@
         
         <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
     </div>
+    <div id = 'spinner-hidden'></div>
     <div id = 'spinner'></div>
+    
 </div>
 
 
