--- a/tango_with_django_project/static/css/styleIndex.css
+++ b/tango_with_django_project/static/css/styleIndex.css
@@ -77,7 +77,7 @@ body {
 }
 
 .spinner {
-  margin-top: 5rem;
+  margin-top: 2rem;
   margin-bottom: 6rem;
   text-align: center;
 }
@@ -220,8 +220,6 @@ t1 {
 .inner_main_content_card {
     padding: 2rem;
     display: block;
-    -webkit-transition: width 0.2s;
-    -webkit-transition: height 1s;
 
 }
 
@@ -235,6 +233,8 @@ t1 {
     line-height:3rem;
     overflow: hidden;
 }
+
+#spinner-hidden {display:none;}
 
 
 #goUp {
