autocorrect function created

--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -6,7 +6,7 @@
 
 <div onload = "javascript:passChange()" class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
-        <input class="form-control" type="text" name="query" value="" id="clubSearch" />
+        <input class="form-control" type="text" oninput="javascript:input()" name="query" value="" id="clubSearch" />
         
         <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
     </div>
