--- a/tango_with_django_project/static/css/styleIndex.css
+++ b/tango_with_django_project/static/css/styleIndex.css
@@ -123,6 +123,12 @@ body {
     line-height: 4rem;
 }
 
+
+.title {
+  font-size: 1.2rem;
+  
+}
+
 #title {
     display: inline-block;
     position: absolute;
@@ -235,7 +241,8 @@ t1 {
 }
 
 #spinner-hidden {display:none;}
-
+#spinner {}
+#dynamic-results-hidden {display:none;}
 
 #goUp {
     margin-right:-1rem;
