--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -9,11 +9,16 @@
         <input class="form-control" type="text" oninput="javascript:input()" name="query" value="" id="clubSearch" />
         
         <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
+
+
     </div>
+
     <div id = 'spinner-hidden'></div>
     <div id = 'spinner'></div>
     
-</div>
 
+</div><br>
+            <div id = 'dynamic-results-hidden'></div>
+        <div id = 'dynamic-results'></div>
 
 {% endblock %}
