--- a/tango_with_django_project/templates/registration/login.html
+++ b/tango_with_django_project/templates/registration/login.html
@@ -13,40 +13,24 @@
         {% csrf_token %}
         {{ form.as_p }}
         <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" value="Log in" />
+        
         <input type="hidden" name="next" value="{{ next }}" />
 		
     </form>
+    <input class="btn-flat waves-effect waves black-text right" type="submit" value="Register" />
+    
 	
 </div>
 
 </div>
 <br>
+
 <div class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
-<form role="form"  method="post" action=".">
-                {% csrf_token %}
+      <div class = 'left'><br>No account?</div>
+      
+    </div>
+</div>
+<br>
 
-Register
-<div class="form-group" >
- <p class="required"> <label for="id_username">Username:</label>
-     <input class="form-control"  id="id_username" maxlength="30" name="username" type="text"  placeholder="Enter username"/></p>
-</div>
- <div class="form-group">
-    <p class="required"><label for="id_email">E-mail:</label>
-        <input class="form-control" id="id_email" name="email" type="email" placeholder="Enter email" /></p>
- </div>
-<div class="form-group">
-    <p class="required"><label for="id_password1">Password:</label>
-        <input class="form-control" id="id_password1" name="password1" type="password" placeholder="Enter password" /></p>
-</div>
-<div class="form-group">
-    <p class="required"><label for="id_password2">Password (again):</label>
- <input class="form-control" id="id_password2" name="password2" type="password" placeholder="Enter password again" /></p>
-</div>
-
-<button type="submit" class="btn btn-primary waves-effect grey darken-3 waves">Register</button>
-
-        </form>
-</div>
-</div>
 {% endblock %}
