--- a/tango_with_django_project/templates/registration/registration_form.html
+++ b/tango_with_django_project/templates/registration/registration_form.html
@@ -2,10 +2,12 @@
 
 
 {% block body_block %}
+
+<div class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
 <form role="form"  method="post" action=".">
                 {% csrf_token %}
 
-<h2 class="form-signin-heading">Sign Up Here</h2>
 
 <div class="form-group" >
  <p class="required"> <label for="id_username">Username:</label>
@@ -24,7 +26,9 @@
  <input class="form-control" id="id_password2" name="password2" type="password" placeholder="Enter password again" /></p>
 </div>
 
-<button type="submit" class="btn btn-default">Submit</button>
+<button type="submit" class="btn btn-primary waves-effect grey darken-3 waves">Submit</button>
 
         </form>
+</div>
+</div>
 {% endblock %}
