--- a/tango_with_django_project/templates/registration/registration_form.html
+++ b/tango_with_django_project/templates/registration/registration_form.html
@@ -5,7 +5,7 @@
 
 <div class = 'main_content_card shown' id = 'search_card'>
     <div class = 'inner_main_content_card'>
-<form role="form"  method="post" action=".">
+<form role="form"  method="post" action="." onsubmit = "javascript:notificationEnabler('newacc')">
                 {% csrf_token %}
 
 
