--- a/tango_with_django_project/templates/healthapple/save_page.html
+++ b/tango_with_django_project/templates/healthapple/save_page.html
@@ -5,8 +5,10 @@
 
 {% block body_block %}
 
+<div class = 'main_content_card shown' id = 'search_card'>
+    <div class = 'inner_main_content_card'>
+
         <form role="form"  id="page_form" method="post" action="/healthapple/save_page/">
-            <h2 class="form-signin-heading">Add a Page to {{ category.name }}</h2>
                     {% csrf_token %}
                     {% for hidden in form.hidden_fields %}
                         {{ hidden }}
@@ -19,10 +21,12 @@
                     {% endfor %}
 
                 <br/>
-            <button class="btn btn-primary" type="submit" name="submit" value="Save">Save Page</button>
+            <button class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Save">Save Page</button>
         </form>
  
-        <p>Category does not exist?<a href= "{% url 'add_category' %}">Add a new category</a></p>
+        <p>Category does not exist? <a href= "{% url 'add_category' %}">Add a new category</a></p>
+        
+</div></div>
  
 
         {% endblock %}
