making user profile and linking between user-person works perfectly

--- a/tango_with_django_project/templates/healthapple/create_profile.html
+++ b/tango_with_django_project/templates/healthapple/create_profile.html
@@ -9,7 +9,7 @@
 	<form action="{% url 'create_profile' %}" method="post">
             {% csrf_token %}
 			
-			
+			<button type="submit">Next</button>
 	</form>
 </div>
 </div>
