--- a/tango_with_django_project/templates/healthapple/index.html
+++ b/tango_with_django_project/templates/healthapple/index.html
@@ -8,11 +8,13 @@
     <div class = 'inner_main_content_card'>
         <input class="form-control" type="text" oninput="javascript:input()" onkeydown='javascript:onButton(event.which || event.keyCode)' name="query" autofocus = 1 value="" id="clubSearch" />
         
-        <input class="btn btn-primary waves-effect grey darken-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
-
+        <input class="btn btn-primary waves-effect green accent-3 waves" type="submit" name="submit" value="Search" onclick="javascript:search()" />
+        <input class="btn btn-primary waves-effect waves-teal btn-flat green-text" type="submit" name="submit" value="Condition" onclick="javascript:type_fun('Condition')" />
+        <input class="btn btn-primary waves-effect waves-teal btn-flat green-text" type="submit" name="submit" value="Medicine" onclick="javascript:type_fun('Medicine')" />
+        <input class="btn btn-primary waves-effect waves-teal btn-flat green-text" type="submit" name="submit" value="Treatment" onclick="javascript:type_fun('Treatment')" />
 
     </div>
-
+    <div id = 'inset_form'></div>
     <div id = 'spinner-hidden'></div>
     <div id = 'spinner'></div>
     
