--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -13,6 +13,27 @@
 		  	<i class="material-icons profile">person</i>{{ user.username |title }}<br>
 		  	<i class="material-icons profile">email</i>{{ user.email |upper }}<br>
 		  	<br>
+	
+	</div>
+	{% if category %}
+	{% for cat in category %}
+        {% if pages %}
+        <ul>	
+				<li>{{ cat }}</li>
+                {% for page in pages %}
+				
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+                </ul>
+        {% else %}
+                <strong>No pages currently in category.</strong>
+                {% endif %}
+
+	{% endfor %}
+    {% else %}
+        The specified category {{ category_name }} does not exist!
+    {% endif %}
+	
 		  	<a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-primary btn-flat black-text">Logout</a>
 			  <a href="{% url 'auth_password_change' %}" class="waves-effect waves btn-flat btn-primary black-text">Change Password</a>
 		  	</div>
