testing something out

--- a/tango_with_django_project/templates/healthapple/user_profile.html
+++ b/tango_with_django_project/templates/healthapple/user_profile.html
@@ -31,7 +31,7 @@
 
 	{% endfor %}
     {% else %}
-        The specified category {{ category_name }} does not exist!
+        The specified category does not exist!
     {% endif %}
 	
 		  	<a onclick = "javascript:notificationEnabler('logout')" href="{% url 'auth_logout' %}?next=/healthapple/" class="waves-effect waves btn-primary btn-flat black-text">Logout</a>
